@@ -107,6 +107,7 @@ div
 
 .tools
   :float right
+  :padding 0px 0px 0px 4px
 
 .label
   :color #3f3f3f
