@@ -181,7 +181,8 @@ div .subtitle {
     height: 30px; }
 
 .tools {
-  float: right; }
+  float: right;
+  padding: 0px 0px 0px 4px; }
 
 .label {
   color: #3f3f3f;
